# esp-pulser-gui

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: publish.yml
src/: App.tsx  const.ts  main.tsx  store.ts
src-python/: hello.py  pyproject.toml
src-tauri/: 2  Cargo.toml  heartbeat_data.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DeviceInfo.tsx  HeartbeatPlot.tsx  Logs.tsx  NetworkingStatus.tsx  Sidebar.tsx  UpdateStatus.tsx
